add html city select

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,12 @@
-.container {
+h1 {
+  text-align: center;
+}
+
+footer {
+  color: #0b5ed7;
+  font-size: 13px;
+  margin: 13px auto 0px;
+  max-width: 400px;
   text-align: center;
 }
 
