--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,70 @@
+body {
+  background-image: url('../images/clock.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 60px auto;
+}
+
 h1 {
   text-align: center;
 }
 
+h2 {
+  margin: 0 0 5px;
+  font-size: 28px;
+}
+
+select {
+  border-radius: 4px;
+  display: block;
+  font-size: 18px;
+  padding: 10px;
+  width: 100%;
+}
+
 footer {
-  color: #0b5ed7;
-  font-size: 13px;
-  margin: 13px auto 0px;
+  color: black;
+  font-size: 10px;
+  margin: 20px auto 0px;
   max-width: 400px;
   text-align: center;
+}
+
+.container {
+  background: white;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 7px 29px 0px;
+  font-family: sans-serif;
+  max-width: 600px;
+  margin: 0px auto 10px;
+  opacity: 0.93;
+  padding: 30px;
+}
+
+.city {
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+  padding: 30px 0;
+}
+
+.city:last-child {
+  border: none;
+}
+
+.date {
+  opacity: 0.7;
+}
+
+.time {
+  font-size: 48px;
+  font-weight: bold;
+}
+
+.time small {
+  font-size: 24px;
+  vertical-align: middle;
 }
 
 .code-link {
